Update branding from "PCF" to "Pivotal"
Signed-off-by: Rob Hill <rhill@pivotal.io>

--- a/_deployfails-ki.html.md.erb
+++ b/_deployfails-ki.html.md.erb
@@ -1,5 +1,5 @@
-+ **Deploy PCF Event Alerts Errand Fails:** If you have binary logging enabled,
-the **Deploy PCF Event Alerts** errand fails when `log_bin_trust_function_creators` is not set to `1`. 
-If you do not resolve this issue, PCF Event Alerts is not deployed.
++ **Deploy Pivotal Event Alerts Errand Fails:** If you have binary logging enabled,
+the **Deploy Pivotal Event Alerts** errand fails when `log_bin_trust_function_creators` is not set to `1`.
+If you do not resolve this issue, Pivotal Event Alerts is not deployed.
 For instructions on solving this issue, 
-see [Deploy PCF Event Alerts Errand Fails](./troubleshooting.html#t-shoot-errors). 
+see [Deploy Pivotal Event Alerts Errand Fails](./troubleshooting.html#t-shoot-errors).
