--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -1,24 +1,24 @@
 ---
-title: PCF Event Alerts
-owner: PCF Event Alerts
+title: Pivotal Event Alerts
+owner: Pivotal Event Alerts
 ---
 
 <strong><%= modified_date %></strong>
 
-This documentation describes PCF Event Alerts.
+This documentation describes Pivotal Event Alerts.
 
 ## <a id='overview'></a>Overview
 
-As a PCF admin, you may want to receive notifications about important events that occur on your system.
-The PCF Event Alerts service gives you the option to set up alerts for a variety of events.
+As a Pivotal Platform admin, you may want to receive notifications about important events that occur on your system.
+The Pivotal Event Alerts service gives you the option to set up alerts for a variety of events.
 You can use this service to subscribe to notification topics---notable events that might occur.
-Notification topics are monitored by publishers---PCF components that emit events.
+Notification topics are monitored by publishers---Pivotal components that emit events.
 You can send these notifications using email, Slack, or webhook integration.
 
-For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
+For example, you can subscribe to a topic from [Pivotal Healthwatch](http://docs.pivotal.io/pcf-healthwatch/index.html)
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
-PCF users with admin permissions can run event alert commands and subscribe to alerts.
+Pivotal Platform users with admin permissions can run event alert commands and subscribe to alerts.
 Admins can configure event alerts using the Cloud Foundry Command Line Interface (cf CLI) tool.
 
 ## <a id='features'></a>Key Features
@@ -29,12 +29,12 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 
 ## <a id='publishers'></a>Supported Publishers
 
-PCF Event Alerts v1.2.3 and later support PCF Healthwatch as a publisher.
-For general information about PCF Healthwatch, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
+Pivotal Event Alerts v1.2.3 and later support Pivotal Healthwatch as a publisher.
+For general information about Pivotal Healthwatch, see [Pivotal Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
 
 ## <a id="snapshot"></a>Product Snapshot
 
-The following table provides version and version-support information about PCF Event Alerts.
+The following table provides version and version-support information about Pivotal Event Alerts.
 
 <table class="nice">
     <th>Element</th>
