fix style issue

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -68,7 +68,7 @@ To create a Slack target, do the following:
 
 1. Create an incoming Slack webhook using the instructions in the
 [Slack documentation](https://get.slack.help/hc/en-us/articles/115005265063-Incoming-WebHooks-for-Slack).<br><br>
-  Note the Slack webhook URL, which is used in the next step.
+  Record the Slack webhook URL, which is used in the next step.
 
 1. Run the command:
 
