--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -152,9 +152,8 @@ To create a webhook target, do the following:
 In order for a target to start receiving alerts, you must subscribe it to available alert topics.
 A topic is an event that is relevant to your system.
 
-<p class="note"><strong>Note:</strong> For PCF Event Alerts v1.2.1,
-you <strong>must</strong> have Pivotal Healthwatch v1.3 or later installed
-if you want to set up and subscribe to Healthwatch topics.
+<p class="note"><strong>Note:</strong> To set up and subscribe to Healthwatch topics,
+you <strong>must</strong> have Pivotal Healthwatch v1.3 or later installed.
 </p>
 
 To subscribe a target to one or more alert topics, do the following:
