change body to payload for consistency[#168672674]

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -94,7 +94,7 @@ You can also use webhook targets to log or store alerts for auditing purposes.
 
 ####<a name='formats'></a> About Webhook Request Formats
 
-Webhook requests are not a standardized format. This means that the request body
+Webhook requests are not a standardized format. This means that the request payload
 from Event Alerts must be changed to a format compatible with the webhook receiver. 
 For example, for PagerDuty, the JSON request payload from Event Alerts must be changed to
 the format required for PagerDuty webhooks. For information about PagerDuty webhook payloads,
