add template variable [#168741047]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -1,24 +1,24 @@
 ---
-title: PCF Event Alerts
-owner: PCF Event Alerts
+title: Pivotal Event Alerts
+owner: Event Alerts
 ---
 
 <strong><%= modified_date %></strong>
 
-This documentation describes PCF Event Alerts.
+This documentation describes <%= vars.product_name %>.
 
 ## <a id='overview'></a>Overview
 
-As a PCF admin, you may want to receive notifications about important events that occur on your system.
-The PCF Event Alerts service gives you the option to set up alerts for a variety of events.
+As an admin, you may want to receive notifications about important events that occur on your system.
+The <%= vars.product_name %> service gives you the option to set up alerts for a variety of events.
 You can use this service to subscribe to notification topics---notable events that might occur.
-Notification topics are monitored by publishers---PCF components that emit events.
+Notification topics are monitored by publishers---<%= vars.platform_name %> components that emit events.
 You can send these notifications using email, Slack, or webhook integration.
 
-For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
+For example, you can subscribe to a topic from [Pivotal Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
-PCF users with admin permissions can run event alert commands and subscribe to alerts.
+<%= vars.platform_name %> users with admin permissions can run event alert commands and subscribe to alerts.
 Admins can configure event alerts using the Cloud Foundry Command Line Interface (cf CLI) tool.
 
 ## <a id='features'></a>Key Features
@@ -29,12 +29,12 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 
 ## <a id='publishers'></a>Supported Publishers
 
-PCF Event Alerts v1.2.1 supports PCF Healthwatch as a publisher.
-For general information about PCF Healthwatch, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
+<%= vars.product_name %> v1.2.1 supports Pivotal Healthwatch as a publisher.
+For general information about Pivotal Healthwatch, see [Pivotal Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
 
 ## <a id="snapshot"></a>Product Snapshot
 
-The following table provides version and version-support information about PCF Event Alerts.
+The following table provides version and version-support information about <%= vars.product_name %>.
 
 <table class="nice">
     <th>Element</th>
@@ -56,12 +56,12 @@ The following table provides version and version-support information about PCF E
         <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
     </tr>
     <tr>
-        <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
+        <td>Compatible Pivotal Healthwatch version(s)</td>
         <td>1.3</td>
     </tr>
     <tr>
         <td>MySQL</td>
-        <td>MySQL for PCF v2 or MySQL 5.7 and later</td>
+        <td>MySQL for Pivotal Platform  v2 or MySQL 5.7 and later</td>
     </tr>
     <tr>
         <td>IaaS support</td>
@@ -72,5 +72,5 @@ The following table provides version and version-support information about PCF E
 ## <a id="feedback"></a>Feedback
 
 If you have a feature request, questions, or information about a bug, please email
-the [Pivotal Cloud Foundry Feedback](mailto:pivotal-cf-feedback@pivotal.io) list
+the [<%= vars.platform_name %> Feedback](mailto:pivotal-cf-feedback@pivotal.io) list
 or [pcf-event-alerts@pivotal.io](mailto:pcf-event-alerts@pivotal.io).
