--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -1,6 +1,6 @@
 ---
-title: Release Notes for PCF Event Alerts
-owner: PCF Event Alerts
+title: Release Notes for Pivotal Event Alerts
+owner: Event Alerts
 ---
 
 <strong><%= modified_date %></strong>
@@ -17,8 +17,8 @@ New features and changes in this release:
 
 This release has the following issue:
 
-+ **Deploy PCF Event Alerts Errand Fails:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand fails when `log_bin_trust_function_creators` is not set to `1`. If you do not resolve this issue, PCF Event Alerts is not deployed. For instructions on solving this issue,
-see [Deploy PCF Event Alerts Errand Fails](./troubleshooting.html#mysql).
++ **Deploy <%= vars.product_name %> Errand Fails:** If you have binary logging enabled, the **Deploy <%= vars.product_name %>** errand fails when `log_bin_trust_function_creators` is not set to `1`. If you do not resolve this issue, <%= vars.product_name %> is not deployed. For instructions on solving this issue,
+see [Deploy <%= vars.product_name %> Errand Fails](./troubleshooting.html#mysql).
 
 ## <a id="view"></a> View Release Notes for Another Version
 
